...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"></TextView>

    <Button
        android:id="@+id/sunday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="S"
        android:clickable="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/monday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="M"
        android:clickable="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tuesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/textView21"
...
        app:layout_constraintEnd_toStartOf="@+id/start_day"
        app:layout_constraintStart_toEndOf="@+id/start_month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"></TextView>

    <Button
        android:id="@+id/friday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="F"
        android:clickable="false"
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saturday"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/start_year"
        android:layout_width="52dp"
...
        app:layout_constraintEnd_toStartOf="@+id/end_day"
        app:layout_constraintStart_toEndOf="@+id/end_month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></TextView>

    <Button
        android:id="@+id/wednesday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="W"
...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"></TextView>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="158dp"
        android:background="#00FFFFFF"
        android:src="?attr/actionModeCloseDrawable"
...
