...
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_habit_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Dark_Gray_Background"
        app:layout_constraintBottom_toBottomOf="@+id/habit_list_today_button"
        app:layout_constraintEnd_toEndOf="parent"
...
